--- a/nhl.html
+++ b/nhl.html
@@ -96,49 +96,54 @@
 </thead>
 <tbody>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-1">Florida Panthers vs Buffalo Sabres</a></td>
-            <td>January 12, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Vancouver Canucks vs Ottawa Senators</a></td>
+            <td>January 13, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 16:00:00" data-start="2026-01-13 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-2">Carolina Hurricanes vs Detroit Red Wings</a></td>
-            <td>January 12, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Tampa Bay Lightning vs Pittsburgh Penguins</a></td>
+            <td>January 13, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 16:00:00" data-start="2026-01-13 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-3">Seattle Kraken vs New York Rangers</a></td>
-            <td>January 12, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Montreal Canadiens vs Washington Capitals</a></td>
+            <td>January 13, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 16:00:00" data-start="2026-01-13 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-4">Tampa Bay Lightning vs Philadelphia Flyers</a></td>
-            <td>January 12, 2026 04:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 16:00:00" data-start="2026-01-12 16:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Calgary Flames vs Columbus Blue Jackets</a></td>
+            <td>January 13, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 16:00:00" data-start="2026-01-13 16:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-5">Vancouver Canucks vs Montreal Canadiens</a></td>
-            <td>January 12, 2026 04:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 16:30:00" data-start="2026-01-12 16:30:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Detroit Red Wings vs Boston Bruins</a></td>
+            <td>January 13, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 16:30:00" data-start="2026-01-13 16:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-6">New Jersey Devils vs Minnesota Wild</a></td>
-            <td>January 12, 2026 05:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 17:00:00" data-start="2026-01-12 17:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Carolina Hurricanes vs St. Louis Blues</a></td>
+            <td>January 13, 2026 04:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 16:30:00" data-start="2026-01-13 16:30:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-7">Edmonton Oilers vs Chicago Blackhawks</a></td>
-            <td>January 12, 2026 05:30 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 17:30:00" data-start="2026-01-12 17:30:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Edmonton Oilers vs Nashville Predators</a></td>
+            <td>January 13, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 17:00:00" data-start="2026-01-13 17:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-8">Toronto Maple Leafs vs Colorado Avalanche</a></td>
-            <td>January 12, 2026 07:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 19:00:00" data-start="2026-01-12 19:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">New York Islanders vs Winnipeg Jets</a></td>
+            <td>January 13, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 17:00:00" data-start="2026-01-13 17:00:00"></span></td>
         </tr>
         <tr>
-            <td><a href="https://roxiestreams.live/nhl-streams-9">Dallas Stars vs Los Angeles Kings</a></td>
-            <td>January 12, 2026 07:00 PM</td>
-            <td><span class="countdown-timer" data-end="2026-01-13 19:00:00" data-start="2026-01-12 19:00:00"></span></td>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">Toronto Maple Leafs vs Utah Mammoth</a></td>
+            <td>January 13, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 19:00:00" data-start="2026-01-13 19:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Dallas Stars vs Anaheim Ducks</a></td>
+            <td>January 13, 2026 07:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-14 19:00:00" data-start="2026-01-13 19:00:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
