--- a/soccer.html
+++ b/soccer.html
@@ -98,33 +98,58 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Al Hilal vs Al Nassr</a></td>
-<td>January 12, 2026 9:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Stuttgart vs Frankfurt</a></td>
+<td>January 13, 2026 9:30 AM</td>
 <td><span class="countdown-timer" data-end="January 13, 2026 09:30:00 AM" data-start="January 12, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Genoa vs Cagliari</a></td>
-<td>January 12, 2026 9:30 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Dortmund vs Werder Bremen</a></td>
+<td>January 13, 2026 11:30 AM</td>
 <td><span class="countdown-timer" data-end="January 13, 2026 09:30:00 AM" data-start="January 12, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Liverpool vs Barnsley</a></td>
-<td>January 12, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Bayeux vs Marseille</a></td>
+<td>January 13, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 13, 2026 11:45:00 AM" data-start="January 12, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Juventus vs Cremonese</a></td>
-<td>January 12, 2026 11:45 AM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Roma vs Torino</a></td>
+<td>January 13, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 13, 2026 11:45:00 AM" data-start="January 12, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/soccer-streams-4">Sevilla vs Celta Vigo</a></td>
-<td>January 12, 2026 12:00 PM</td>
+<td>January 13, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 13, 2026 12:00:00 PM" data-start="January 12, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">PSG vs Paris</a></td>
-<td>January 12, 2026 12:10 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Deportivo La Coruña vs Atletico Madrid</a></td>
+<td>January 13, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Newcastle United vs Manchester City</a></td>
+<td>January 13, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Puebla vs Mazatlán</a></td>
+<td>January 13, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Necaxa vs Monterrey</a></td>
+<td>January 13, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Pachuca vs León</a></td>
+<td>January 13, 2026 5:06 PM</td>
+<td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Juárez vs Chivas</a></td>
+<td>January 13, 2026 7:10 PM</td>
 <td><span class="countdown-timer" data-end="January 13, 2026 12:10:00 PM" data-start="January 12, 2026 12:10:00 PM"></span></td>
 </tr>
 <tr>
