--- a/nba.html
+++ b/nba.html
@@ -226,6 +226,124 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 13, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Phoenix Suns vs Miami Heat
+        </a>
+       </td>
+       <td>
+        January 13, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 4:30 PM:00" data-start="January 13, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Chicago Bulls vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        January 13, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Minnesota Timberwolves vs Milwaukee Bucks
+        </a>
+       </td>
+       <td>
+        January 13, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Denver Nuggets vs New Orleans Pelicans
+        </a>
+       </td>
+       <td>
+        January 13, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         San Antonio Spurs vs Oklahoma City Thunder
+        </a>
+       </td>
+       <td>
+        January 13, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Atlanta Hawks vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        January 13, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 7:30 PM:00" data-start="January 13, 2026 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         Portland Trail Blazers vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 13, 2026 8:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 14, 2026 8:00 PM:00" data-start="January 13, 2026 8:00 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
