--- a/soccer-streams-6.html
+++ b/soccer-streams-6.html
@@ -103,7 +103,7 @@
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', 'daffodil'))">Stream 1</button>
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('itv.m3u8', '601'))">Stream 2</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('foot.m3u8', 'abby'))">Stream 3</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', 'https://abby.shadow-ran.online/foot.m3u8')">Stream 3</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
