--- a/index.html
+++ b/index.html
@@ -184,29 +184,20 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE RAW</a></td>
-<td>January 12, 2026 11:00 AM</td>
-<td><span class="countdown-timer" data-end="January 13, 2026 11:00:00 AM" data-start="January 12, 2026 11:00:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">FA Cup</a></td>
-<td>January 12, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 13, 2026 11:45:00 AM" data-start="January 12, 2026 11:45:00 AM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">Laliga</a></td>
-<td>January 12, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 13, 2026 12:00:00 PM" data-start="January 12, 2026 12:00:00 PM"></span></td>
+
+<td><a href="https://roxiestreams.live/soccer-streams-6">FA Cup</a></td>
+<td>January 13, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 14, 2026 11:45:00 AM" data-start="January 13, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 12, 2026 4:00 PM</td>
-<td><span class="countdown-timer" data-end="January 13, 2026 04:00:00 PM" data-start="January 12, 2026 04:00:00 PM"></span></td>
+<td>January 13, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 14, 2026 04:00:00 PM" data-start="January 13, 2026 04:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/nfl-streams-1">NFL Playoffs (MNF)</a></td>
-<td>January 12, 2026 5:15 PM</td>
-<td><span class="countdown-timer" data-end="January 13, 2026 05:15:00 PM" data-start="January 12, 2026 05:15:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
+<td>January 13, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 14, 2026 11:00:00 AM" data-start="January 13, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
