--- a/nba.html
+++ b/nba.html
@@ -143,98 +143,98 @@
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-1">
-         Phoenix Suns vs Miami Heat
+         Toronto Raptors vs Indiana Pacers
         </a>
        </td>
        <td>
-        January 13, 2026 4:30 PM
+        January 14, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 4:30 PM:00" data-start="January 13, 2026 4:30 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 4:00 PM:00" data-start="January 14, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-2">
-         Chicago Bulls vs Houston Rockets
+         Cleveland Cavaliers vs Philadelphia 76ers
         </a>
        </td>
        <td>
-        January 13, 2026 5:00 PM
+        January 14, 2026 4:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 4:00 PM:00" data-start="January 14, 2026 4:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-3">
-         Minnesota Timberwolves vs Milwaukee Bucks
+         Utah Jazz vs Chicago Bulls
         </a>
        </td>
        <td>
-        January 13, 2026 5:00 PM
+        January 14, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 5:00 PM:00" data-start="January 14, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-4">
-         Denver Nuggets vs New Orleans Pelicans
+         Brooklyn Nets vs New Orleans Pelicans
         </a>
        </td>
        <td>
-        January 13, 2026 5:00 PM
+        January 14, 2026 5:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 5:00 PM:00" data-start="January 14, 2026 5:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-5">
-         San Antonio Spurs vs Oklahoma City Thunder
+         Denver Nuggets vs Dallas Mavericks
         </a>
        </td>
        <td>
-        January 13, 2026 5:00 PM
+        January 14, 2026 6:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 5:00 PM:00" data-start="January 13, 2026 5:00 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 6:30 PM:00" data-start="January 14, 2026 6:30 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-6">
-         Atlanta Hawks vs Los Angeles Lakers
+         New York Knicks vs Sacramento Kings
         </a>
        </td>
        <td>
-        January 13, 2026 7:30 PM
+        January 14, 2026 7:00 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 7:30 PM:00" data-start="January 13, 2026 7:30 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 7:00 PM:00" data-start="January 14, 2026 7:00 PM:00">
         </span>
        </td>
       </tr>
       <tr>
        <td>
         <a href="https://roxiestreams.live/nba-streams-7">
-         Portland Trail Blazers vs Golden State Warriors
+         Washington Wizards vs Los Angeles Clippers
         </a>
        </td>
        <td>
-        January 13, 2026 8:00 PM
+        January 14, 2026 7:30 PM
        </td>
        <td>
-        <span class="countdown-timer" data-end="January 14, 2026 8:00 PM:00" data-start="January 13, 2026 8:00 PM:00">
+        <span class="countdown-timer" data-end="January 15, 2026 7:30 PM:00" data-start="January 14, 2026 7:30 PM:00">
         </span>
        </td>
       </tr>
