--- a/index.html
+++ b/index.html
@@ -184,19 +184,29 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">FA Cup</a></td>
-<td>January 13, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 14, 2026 11:45:00 AM" data-start="January 13, 2026 11:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-16">AFCON Semi Final</a></td>
+<td>January 14, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">FA Cup</a></td>
+<td>January 14, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Copa Del Rey</a></td>
+<td>January 14, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 13, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 14, 2026 04:30:00 PM" data-start="January 13, 2026 04:30:00 PM"></span></td>
+<td>January 14, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="January 15, 2026 04:30:00 PM" data-start="January 14, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/wwe-streams">WWE NXT</a></td>
-<td>January 13, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 14, 2026 05:00:00 PM" data-start="January 13, 2026 05:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">AEW</a></td>
+<td>January 14, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 15, 2026 05:00:00 PM" data-start="January 14, 2026 05:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tr></tbody>
