--- a/soccer.html
+++ b/soccer.html
@@ -133,6 +133,11 @@
 <td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Nigeria vs Morocco</a></td>
+<td>January 14, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
 <td><a href="https://roxiestreams.live/soccer-streams-7">Benfica vs Porto</a></td>
 <td>January 14, 2026 12:45 PM</td>
 <td><span class="countdown-timer" data-end="January 15, 2026 12:45:00 PM" data-start="January 14, 2026 12:45:00 PM"></span></td>
