--- a/soccer-streams-4.html
+++ b/soccer-streams-4.html
@@ -102,7 +102,7 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('main.m3u8', 'daffodil'))">Stream 1</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('foot.m3u8', '602'))">Stream 2</button>
+<button class="streambutton" onclick="showPlayer('clappr', 'https://602.shadow-ran.online/foot.m3u8')">Stream 2</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
