--- a/soccer-streams-5.html
+++ b/soccer-streams-5.html
@@ -102,7 +102,7 @@
             <div id="playerContainer"></div>
 	<div class="streamchanger">
 	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('madrid.m3u8', 'daffodil'))">Stream 1 (ES)</button>
-	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('madriden.m3u8', 'daffodil'))">Stream 2 (EN)</button>
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('madriden.m3u8', 'daffodil'))">Stream 2</button>
 	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
