--- a/soccer-streams-15.html
+++ b/soccer-streams-15.html
@@ -100,10 +100,9 @@
     <div class="container container-fluid pt-2 text-white">
         <div class="fullplayer">
             <div id="playerContainer"></div>
-            <div class="streamchanger">
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://d162h6qqsk8wvl.cloudfront.net/0c972070-8470-4297-9bd1-1c9ad58cbfd3/manifest.m3u8')">Stream 1 (Multi Quality)</button>
-                <button class="streambutton" onclick="showPlayer('clappr', 'https://602.shadow-ran.online/sportv.m3u8')">Stream 2</button>
-            </div>
+	<div class="streamchanger">
+	  <button class="streambutton" onclick="showPlayer('clappr', getRandomStream('tudn.m3u8', 'daffodil'))">Stream 1</button>
+	</div>
             <div class="embedchat">
                 <iframe src="https://www.youtube.com/live_chat?v=ZS9KXyH7Qjc&amp;embed_domain=roxiestreams.live"></iframe>
             </div>
@@ -117,29 +116,46 @@
         <p class="mb-0 text-body-secondary text-center text-lg-start">Roxiestreams © 2024</p>
     </footer>
 
-    <script>
-        var clapprPlayer;
+<script>
+var clapprPlayer;
+var domains = [];
+var subdomain = 'daffodil';  // Edit this per HTML file
 
-        function showPlayer(playerType, stream) {
-            if (playerType === "clappr") {
-                if (clapprPlayer) {
-                    clapprPlayer.destroy();
-                }
+// Load domains from txt file
+fetch('domains.txt')
+  .then(response => response.text())
+  .then(data => {
+    domains = data.trim().split('\n').filter(d => d.trim());
+    // Auto-load initial stream after domains load
+    setTimeout(() => showPlayer('clappr', getRandomStream('tudn.m3u8')), 500);
+  })
+  .catch(() => {
+    console.error('Failed to load domains.txt');
+  });
 
-                clapprPlayer = new Clappr.Player({
-                    source: stream,
-                    parentId: "#playerContainer",
-                    height: '100%',
-                    width: '100%',
-                    autoPlay: true,
-                });
-            }
-        }
+function getRandomStream(streamPath, subdomain = 'daffodil') {
+  if (domains.length === 0) {
+    return `https://${subdomain}.shadow-ran.online/${streamPath}`; // Fallback
+  }
+  const randomDomain = domains[Math.floor(Math.random() * domains.length)];
+  return `https://${subdomain}.${randomDomain}/${streamPath}`;
+}
 
-        window.onload = function() {
-            showPlayer('clappr', 'https://d162h6qqsk8wvl.cloudfront.net/0c972070-8470-4297-9bd1-1c9ad58cbfd3/manifest.m3u8');
-        };
-    </script>
+function showPlayer(playerType, stream) {
+  if (playerType === "clappr") {
+    if (clapprPlayer) {
+      clapprPlayer.destroy();
+    }
+    clapprPlayer = new Clappr.Player({
+      source: stream,
+      parentId: "#playerContainer",
+      height: '100%',
+      width: '100%',
+      autoPlay: true,
+    });
+  }
+}
+</script>
     <script>
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
@@ -153,22 +169,11 @@
         });
     </script>
     <script src="js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript">
-    aclib.runPop({
-        zoneId: '10754426',
-    });
-</script>
-    <script>
-        atOptions = {
-            'key' : 'b1b8ec11c0dbedd922608bac17f740ee',
-            'format' : 'iframe',
-            'height' : 250,
-            'width' : 300,
-            'params' : {}
-        };
-    </script>
-    <script src="https://monthspathsmug.com/b1b8ec11c0dbedd922608bac17f740ee/invoke.js"></script>
-    <script src="https://monthspathsmug.com/39/5b/74/395b743c98df9f3269c808abb2b1d06a.js"></script>
 
-</body>
+
+<script type="text/javascript">
+aclib.runPop({
+zoneId: '10754426',
+});
+</script></body>
 </html>
