--- a/nba.html
+++ b/nba.html
@@ -240,6 +240,152 @@
       </tr>
      </tbody>
     </table>
+    <h2>
+     NBA Schedule for January 15, 2026
+    </h2>
+    <table id="eventsTable">
+     <thead>
+      <tr>
+       <th>
+        Event
+       </th>
+       <th>
+        Start Time
+       </th>
+       <th>
+        Countdown
+       </th>
+      </tr>
+     </thead>
+     <tbody>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-1">
+         Memphis Grizzlies vs Orlando Magic
+        </a>
+       </td>
+       <td>
+        January 15, 2026 11:00 AM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 11:00 AM:00" data-start="January 15, 2026 11:00 AM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-2">
+         Phoenix Suns vs Detroit Pistons
+        </a>
+       </td>
+       <td>
+        January 15, 2026 4:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 4:00 PM:00" data-start="January 15, 2026 4:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-3">
+         Boston Celtics vs Miami Heat
+        </a>
+       </td>
+       <td>
+        January 15, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 4:30 PM:00" data-start="January 15, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-4">
+         Oklahoma City Thunder vs Houston Rockets
+        </a>
+       </td>
+       <td>
+        January 15, 2026 4:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 4:30 PM:00" data-start="January 15, 2026 4:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-5">
+         Milwaukee Bucks vs San Antonio Spurs
+        </a>
+       </td>
+       <td>
+        January 15, 2026 5:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 5:00 PM:00" data-start="January 15, 2026 5:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-6">
+         Utah Jazz vs Dallas Mavericks
+        </a>
+       </td>
+       <td>
+        January 15, 2026 5:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 5:30 PM:00" data-start="January 15, 2026 5:30 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-7">
+         New York Knicks vs Golden State Warriors
+        </a>
+       </td>
+       <td>
+        January 15, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 7:00 PM:00" data-start="January 15, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-8">
+         Atlanta Hawks vs Portland Trail Blazers
+        </a>
+       </td>
+       <td>
+        January 15, 2026 7:00 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 7:00 PM:00" data-start="January 15, 2026 7:00 PM:00">
+        </span>
+       </td>
+      </tr>
+      <tr>
+       <td>
+        <a href="https://roxiestreams.live/nba-streams-9">
+         Charlotte Hornets vs Los Angeles Lakers
+        </a>
+       </td>
+       <td>
+        January 15, 2026 7:30 PM
+       </td>
+       <td>
+        <span class="countdown-timer" data-end="January 16, 2026 7:30 PM:00" data-start="January 15, 2026 7:30 PM:00">
+        </span>
+       </td>
+      </tr>
+     </tbody>
+    </table>
     <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
      <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
       <li class="nav-item">
