--- a/nhl.html
+++ b/nhl.html
@@ -114,6 +114,59 @@
             <td><a href="https://roxiestreams.live/nhl-streams-4">Vegas Golden Knights vs Los Angeles Kings</a></td>
             <td>January 14, 2026 07:00 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-15 19:00:00" data-start="2026-01-14 19:00:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Thursday, January 15, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">Montreal Canadiens vs Buffalo Sabres</a></td>
+            <td>January 15, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 16:00:00" data-start="2026-01-15 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Philadelphia Flyers vs Pittsburgh Penguins</a></td>
+            <td>January 15, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 16:00:00" data-start="2026-01-15 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">San Jose Sharks vs Washington Capitals</a></td>
+            <td>January 15, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 16:00:00" data-start="2026-01-15 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Vancouver Canucks vs Columbus Blue Jackets</a></td>
+            <td>January 15, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 16:00:00" data-start="2026-01-15 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Seattle Kraken vs Boston Bruins</a></td>
+            <td>January 15, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 17:00:00" data-start="2026-01-15 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-6">Winnipeg Jets vs Minnesota Wild</a></td>
+            <td>January 15, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 17:00:00" data-start="2026-01-15 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-7">Calgary Flames vs Chicago Blackhawks</a></td>
+            <td>January 15, 2026 05:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 17:30:00" data-start="2026-01-15 17:30:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-8">Dallas Stars vs Utah Mammoth</a></td>
+            <td>January 15, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 18:00:00" data-start="2026-01-15 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-9">New York Islanders vs Edmonton Oilers</a></td>
+            <td>January 15, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 18:00:00" data-start="2026-01-15 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-10">Toronto Maple Leafs vs Vegas Golden Knights</a></td>
+            <td>January 15, 2026 06:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-16 18:30:00" data-start="2026-01-15 18:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
