--- a/soccer.html
+++ b/soccer.html
@@ -98,89 +98,34 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Napoli vs Parma</a></td>
-<td>January 14, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 09:30:00 AM" data-start="January 14, 2026 09:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Verona vs Bologna</a></td>
+<td>January 15, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 09:30:00 AM" data-start="January 15, 2026 09:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Köln vs Bayern München</a></td>
-<td>January 14, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 11:30:00 AM" data-start="January 14, 2026 11:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Augsburg vs Union Berlin</a></td>
+<td>January 15, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 11:30:00 AM" data-start="January 15, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Falkirk vs Celtic</a></td>
-<td>January 14, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 11:45:00 AM" data-start="January 14, 2026 11:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Como vs Milan</a></td>
+<td>January 15, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 11:45:00 AM" data-start="January 15, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Inter Milan vs Lecce</a></td>
-<td>January 14, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 11:45:00 AM" data-start="January 14, 2026 11:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Racing Santander vs Barcelona</a></td>
+<td>January 15, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 12:00:00 PM" data-start="January 15, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Chelsea vs Arsenal</a></td>
-<td>January 14, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Olimpia vs Colo Colo</a></td>
+<td>January 15, 2026 3:45 PM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 03:45:00 PM" data-start="January 15, 2026 03:45:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Real Madrid vs Albacete</a></td>
-<td>January 14, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Real Betis vs Elche</a></td>
-<td>January 14, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-16">Nigeria vs Morocco</a></td>
-<td>January 14, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 12:00:00 PM" data-start="January 14, 2026 12:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-7">Benfica vs Porto</a></td>
-<td>January 14, 2026 12:45 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 12:45:00 PM" data-start="January 14, 2026 12:45:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-8">Boca Juniors vs Millonarios</a></td>
-<td>January 14, 2026 2:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 02:00:00 PM" data-start="January 14, 2026 02:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-9">Fluminense vs Madureira</a></td>
-<td>January 14, 2026 2:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 02:00:00 PM" data-start="January 14, 2026 02:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-10">Cruz Azul vs Atlas</a></td>
-<td>January 14, 2026 3:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 03:00:00 PM" data-start="January 14, 2026 03:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-11">Grêmio vs EC São José</a></td>
-<td>January 14, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 04:30:00 PM" data-start="January 14, 2026 04:30:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-12">Querétaro vs Tijuana</a></td>
-<td>January 14, 2026 5:00 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 05:00:00 PM" data-start="January 14, 2026 05:00:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-13">América vs Atlético San Luis</a></td>
-<td>January 14, 2026 5:05 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 05:05:00 PM" data-start="January 14, 2026 05:05:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-14">Tigres UANL vs Pumas UNAM</a></td>
-<td>January 14, 2026 7:06 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 07:06:00 PM" data-start="January 14, 2026 07:06:00 PM"></span></td>
-</tr>
-<tr>
-<td><a href="https://roxiestreams.live/soccer-streams-15">Toluca vs Santos Laguna</a></td>
-<td>January 14, 2026 7:10 PM</td>
-<td><span class="countdown-timer" data-end="January 15, 2026 07:10:00 PM" data-start="January 14, 2026 07:10:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Vasco Da Gama vs Maricá</a></td>
+<td>January 15, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 04:30:00 PM" data-start="January 15, 2026 04:30:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
