--- a/nhl.html
+++ b/nhl.html
@@ -144,6 +144,34 @@
             <td><a href="https://roxiestreams.live/nhl-streams-10">Toronto Maple Leafs vs Vegas Golden Knights</a></td>
             <td>January 15, 2026 06:30 PM</td>
             <td><span class="countdown-timer" data-end="2026-01-16 18:30:00" data-start="2026-01-15 18:30:00"></span></td>
+        </tr>
+        <tr style="background-color: #333; color: white;">
+            <td colspan="3"><strong>Friday, January 16, 2026</strong></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-1">San Jose Sharks vs Detroit Red Wings</a></td>
+            <td>January 16, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-17 16:00:00" data-start="2026-01-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-2">Florida Panthers vs Carolina Hurricanes</a></td>
+            <td>January 16, 2026 04:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-17 16:00:00" data-start="2026-01-16 16:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-3">Tampa Bay Lightning vs St. Louis Blues</a></td>
+            <td>January 16, 2026 05:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-17 17:00:00" data-start="2026-01-16 17:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-4">Nashville Predators vs Colorado Avalanche</a></td>
+            <td>January 16, 2026 06:00 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-17 18:00:00" data-start="2026-01-16 18:00:00"></span></td>
+        </tr>
+        <tr>
+            <td><a href="https://roxiestreams.live/nhl-streams-5">Anaheim Ducks vs Los Angeles Kings</a></td>
+            <td>January 16, 2026 07:30 PM</td>
+            <td><span class="countdown-timer" data-end="2026-01-17 19:30:00" data-start="2026-01-16 19:30:00"></span></td>
         </tr></tbody></table>
 </div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
