--- a/soccer.html
+++ b/soccer.html
@@ -98,34 +98,44 @@
 <tr>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">Verona vs Bologna</a></td>
-<td>January 15, 2026 9:30 AM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 09:30:00 AM" data-start="January 15, 2026 09:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Monaco vs Lorient</a></td>
+<td>January 16, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 10:00:00 AM" data-start="January 16, 2026 10:00:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-2">Augsburg vs Union Berlin</a></td>
-<td>January 15, 2026 11:30 AM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 11:30:00 AM" data-start="January 15, 2026 11:30:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Werder Bremen vs Frankfurt</a></td>
+<td>January 16, 2026 11:30 AM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 11:30:00 AM" data-start="January 16, 2026 11:30:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-3">Como vs Milan</a></td>
-<td>January 15, 2026 11:45 AM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 11:45:00 AM" data-start="January 15, 2026 11:45:00 AM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Pisa vs Atalanta</a></td>
+<td>January 16, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 11:45:00 AM" data-start="January 16, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Racing Santander vs Barcelona</a></td>
-<td>January 15, 2026 12:00 PM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 12:00:00 PM" data-start="January 15, 2026 12:00:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Rangers vs Annan Athletic</a></td>
+<td>January 16, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 11:45:00 AM" data-start="January 16, 2026 11:45:00 AM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-5">Olimpia vs Colo Colo</a></td>
-<td>January 15, 2026 3:45 PM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 03:45:00 PM" data-start="January 15, 2026 03:45:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">PSG vs Lille</a></td>
+<td>January 16, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 12:00:00 PM" data-start="January 16, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-6">Vasco Da Gama vs Maricá</a></td>
-<td>January 15, 2026 4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 16, 2026 04:30:00 PM" data-start="January 15, 2026 04:30:00 PM"></span></td>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Espanyol vs Girona</a></td>
+<td>January 16, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 12:00:00 PM" data-start="January 16, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">West Bromwich Albion vs Middlesbrough</a></td>
+<td>January 16, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 12:00:00 PM" data-start="January 16, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Mazatlán vs Monterrey</a></td>
+<td>January 16, 2026 7:00 PM</td>
+<td><span class="countdown-timer" data-end="January 17, 2026 07:00:00 PM" data-start="January 16, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
 </tr></tbody></tr></tbody></table></div>
