--- a/fighting.html
+++ b/fighting.html
@@ -98,9 +98,9 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/ppv-streams-1">TSZYU vs ZERAFA</a></td>
-<td>January 15, 2026 10:00 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 15, 2026 22:00:00"></span></td>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>January 16, 2026 17:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 23:59:00" data-start="January 16, 2026 17:00:00"></span></td>
 </tr>
 <tr>
 </tbody>
