--- a/motorsports.html
+++ b/motorsports.html
@@ -97,14 +97,14 @@
 </thead>
 <tbody>
 <tr>
-<td><a href="https://roxiestreams.live/supercross">AMA Supercross - Race</a></td>
-<td>January 10, 2026 10/4:30 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 10, 2026 16:30:00"></span>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross - Qualifying</a></td>
+<td>January 10, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 10, 2026 10:00:00"></span>
 </td>
 <tr>
-<td><a href="https://roxiestreams.live/f1-streams">Formula E - Grand Prix</a></td>
-<td>January 10, 2026 12:05 PM</td>
-<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 10, 2026 12:05:00"></span>
+<td><a href="https://roxiestreams.live/supercross">AMA Supercross - Race</a></td>
+<td>January 10, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 30, 2026 13:00:00" data-start="January 10, 2026 16:00:00"></span>
 </td>
 <tr>
 </tbody>
