--- a/index.html
+++ b/index.html
@@ -184,13 +184,28 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-4">Copa Del Rey</a></td>
-<td>January 15, 2026 12:00 PM</td>
+<td><a href="https://roxiestreams.live/soccer-streams-1">TSZYU vs ZERAFA</a></td>
+<td>January 15, 2026 10:00 PM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 12:00:00 PM" data-start="January 15, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Ligue 1</a></td>
+<td>January 16, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 12:00:00 PM" data-start="January 15, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Laliga</a></td>
+<td>January 16, 2026 12:00 PM</td>
 <td><span class="countdown-timer" data-end="January 16, 2026 12:00:00 PM" data-start="January 15, 2026 12:00:00 PM"></span></td>
 </tr>
 <tr>
 <td><a href="https://roxiestreams.live/nba">NBA</a></td>
-<td>January 15, 2026 11:00 AM</td>
+<td>January 16, 2026 4:00 PM</td>
+<td><span class="countdown-timer" data-end="January 16, 2026 11:00:00 AM" data-start="January 15, 2026 11:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/wwe-streams">WWE Smackdown</a></td>
+<td>January 16, 2026 5:00 PM</td>
 <td><span class="countdown-timer" data-end="January 16, 2026 11:00:00 AM" data-start="January 15, 2026 11:00:00 AM"></span></td>
 </tr>
 <tr>
