--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <tbody>
 <tr>
 <tr>
-<td><a href="https://roxiestreams.live/soccer-streams-1">TSZYU vs ZERAFA</a></td>
+<td><a href="https://roxiestreams.live/ppv-streams-1">TSZYU vs ZERAFA</a></td>
 <td>January 15, 2026 10:00 PM</td>
 <td><span class="countdown-timer" data-end="January 16, 2026 10:00:00 PM" data-start="January 15, 2026 10:00:00 PM"></span></td>
 </tr>
