--- a/soccer-streams-6.html
+++ b/soccer-streams-6.html
@@ -136,7 +136,7 @@
         }
 
         window.onload = function() {
-            showPlayer('clappr', 'https://daffodil.shadow-ran.online/sportv.m3u8');
+            showPlayer('clappr', 'https://daffodil.shadow-ran.online/main.m3u8');
         };
     </script>
     <script>
