--- a/soccer.html
+++ b/soccer.html
@@ -138,6 +138,181 @@
 <td><span class="countdown-timer" data-end="January 17, 2026 07:00:00 PM" data-start="January 16, 2026 07:00:00 PM"></span></td>
 </tr>
 <tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Manchester United vs Manchester City</a></td>
+<td>January 17, 2026 4:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 AM" data-start="January 17, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">Ipswich Town vs Blackburn Rovers</a></td>
+<td>January 17, 2026 4:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 AM" data-start="January 17, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Watford vs Millwall</a></td>
+<td>January 17, 2026 4:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 AM" data-start="January 17, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Coventry City vs Leicester City</a></td>
+<td>January 17, 2026 4:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 AM" data-start="January 17, 2026 04:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Real Madrid vs Levante</a></td>
+<td>January 17, 2026 5:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 05:00:00 AM" data-start="January 17, 2026 05:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-6">Udinese vs Inter Milan</a></td>
+<td>January 17, 2026 6:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 06:00:00 AM" data-start="January 17, 2026 06:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-7">Chelsea vs Brentford</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-8">Leeds United vs Fulham</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-9">Sunderland vs Crystal Palace</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-10">Tottenham vs West Ham</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-1">Liverpool vs Burnley</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Preston North End vs Derby County</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-4">Stoke City vs Queens Park Rangers</a></td>
+<td>January 17, 2026 7:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 AM" data-start="January 17, 2026 07:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Mallorca vs Athletic Club</a></td>
+<td>January 17, 2026 7:15 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:15:00 AM" data-start="January 17, 2026 07:15:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Egypt vs Nigeria</a></td>
+<td>January 17, 2026 8:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 08:00:00 AM" data-start="January 17, 2026 08:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Lens vs Auxerre</a></td>
+<td>January 17, 2026 8:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 08:00:00 AM" data-start="January 17, 2026 08:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Napoli vs Sassuolo</a></td>
+<td>January 17, 2026 9:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 09:00:00 AM" data-start="January 17, 2026 09:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Al Nassr vs Al Shabab</a></td>
+<td>January 17, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 09:30:00 AM" data-start="January 17, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Nottingham Forest vs Arsenal</a></td>
+<td>January 17, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 09:30:00 AM" data-start="January 17, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-2">RB Leipzig vs Bayern München</a></td>
+<td>January 17, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 09:30:00 AM" data-start="January 17, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Osasuna vs Real Oviedo</a></td>
+<td>January 17, 2026 9:30 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 09:30:00 AM" data-start="January 17, 2026 09:30:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Toulouse vs Nice</a></td>
+<td>January 17, 2026 10:00 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 10:00:00 AM" data-start="January 17, 2026 10:00:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-3">Cagliari vs Juventus</a></td>
+<td>January 17, 2026 11:45 AM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 11:45:00 AM" data-start="January 17, 2026 11:45:00 AM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-5">Real Betis vs Villarreal</a></td>
+<td>January 17, 2026 12:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 12:00:00 PM" data-start="January 17, 2026 12:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-11">Angers SCO vs Marseille</a></td>
+<td>January 17, 2026 12:05 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 12:05:00 PM" data-start="January 17, 2026 12:05:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-12">Rio Ave vs Benfica</a></td>
+<td>January 17, 2026 12:30 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 12:30:00 PM" data-start="January 17, 2026 12:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-13">Boavista vs Flumiense</a></td>
+<td>January 17, 2026 1:30 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 01:30:00 PM" data-start="January 17, 2026 01:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Grêmio vs São Luiz</a></td>
+<td>January 17, 2026 2:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 02:00:00 PM" data-start="January 17, 2026 02:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-15">Necaxa vs Atlas</a></td>
+<td>January 17, 2026 3:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 03:00:00 PM" data-start="January 17, 2026 03:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Chivas vs Querétaro</a></td>
+<td>January 17, 2026 3:07 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 03:07:00 PM" data-start="January 17, 2026 03:07:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-14">Volta Redonda vs Flamengo</a></td>
+<td>January 17, 2026 4:30 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:30:00 PM" data-start="January 17, 2026 04:30:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-17">Peñarol vs River Plate</a></td>
+<td>January 17, 2026 4:45 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 04:45:00 PM" data-start="January 17, 2026 04:45:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-16">Tigres UANL vs Toluca</a></td>
+<td>January 17, 2026 5:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 05:00:00 PM" data-start="January 17, 2026 05:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-18">Cruz Azul vs Puebla</a></td>
+<td>January 17, 2026 7:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
+<td><a href="https://roxiestreams.live/soccer-streams-19">Canada vs Guatemala</a></td>
+<td>January 17, 2026 7:00 PM</td>
+<td><span class="countdown-timer" data-end="January 18, 2026 07:00:00 PM" data-start="January 17, 2026 07:00:00 PM"></span></td>
+</tr>
+<tr>
 </tr></tbody></tr></tbody></table></div>
 <footer class="container-fluid d-flex flex-column flex-lg-row justify-content-lg-between align-items-center py-2 border-top mt-5">
 <ul class="nav justify-content-center justify-content-lg-start mb-2 mb-lg-0">
